<resources>
    <string name="app_name">Floads-Driver</string>

    <!-- Labels for Text View -->
    <string name="tv_masuk">Masuk</string>
    <string name="tv_welcome">Selamat Datang Di Floads</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_prefix_forgotPass">Lupa password ?</string>
    <string name="tv_reset_password">Reset Password</string>
    <string name="tv_daftar">Daftar</string>
    <string name="tv_no_account">Belum punya akun ?</string>
    <string name="tv_atau">atau</string>
    <string name="tv_namaLengkap">Nama Lengkap</string>
    <string name="tv_nomorKTP">Nomor KTP</string>
    <string name="tv_nomorTelepon">Nomor Telepon (WhatsApp)</string>
    <string name="tv_jenisKelamin">Jenis Kelamin</string>
    <string name="tv_tgl_lahir">Tanggal Lahir</string>
    <string name="tv_kota">Kota</string>
    <string name="tv_kecamatan">Kecamatan</string>
    <string name="tv_kelurahan">Kelurahan</string>
    <string name="tv_alamat">Alamat</string>
    <string name="tv_status_offline">Offline</string>
    <string name="tv_offline_state">Anda sedang offline !</string>
    <string name="tv_askingForOnline"><![CDATA[Aktifkan & mulailah menerima job baru.]]></string>
    <string name="tv_more_routes">Anda memiliki sisa jarak yang harus di selesaikan.</string>
    <string name="tv_pekerjaan">Pekerjaan</string>
    <string name="tv_driver_name">Jeremiah Curtis</string>
    <string name="tv_driver_level">Pemula</string>
    <string name="tv_price">Rp 100.000</string>
    <string name="tv_price_basis">Perhari</string>
    <string name="tv_desc_distance_left">Sisa jarak</string>
    <string name="tv_days_left">8</string>
    <string name="tv_desc_days_left">Sisa hari</string>
    <string name="tv_desc_verifikasi_no_telepon">Verifikasi Nomor Telepon</string>
    <string name="tv_desc_verification_sent">Masukkan kode verifikasi telah dikirimkan\nvia SMS ke nomor kamu di %s</string>
    <string name="tv_resend_otp">Kirim ulang OTP</string>
    <string name="tv_otp_timer">(0:00)</string>
    <string name="tv_edit">Edit</string>
    <string name="tv_container_information">INFORMASI</string>
    <string name="tv_username_label">Username</string>
    <string name="tv_repeat_password">Ulangi Password</string>
    <string name="tv_phone_number">Phone Number</string>
    <string name="tv_edit_photo">Edit Foto</string>
    <string name="tv_resend_link_desc">Belum menerima link reset password?</string>
    <string name="tv_resend_link">Kirim Ulang</string>
    <string name="tv_send">Kirim</string>
    <string name="tv_new_password">Password Baru</string>
    <string name="tv_new_password_repeat">Ulangi Password Baru</string>
    <string name="tv_brand_label">Merk</string>
    <string name="tv_brand">NMAX 550 CC</string>
    <string name="tv_police_number_label">Plat Nomor</string>
    <string name="tv_police_number">DA 1234 BBU</string>
    <string name="tv_color_label">Warna</string>
    <string name="tv_color">Hitam</string>
    <string name="tv_driving_license_label">Kartu SIM</string>
    <string name="tv_ktp_label">Kartu KTP/Pelajar</string>
    <string name="tv_history">History</string>
    <string name="tv_date">Pilih tanggal</string>
    <string name="tv_total_distance_label">Total Jarak</string>
    <string name="tv_desc_income">Pendapatan</string>
    <string name="tv_income">Rp 20.000.00</string>
    <string name="tv_driver_wage">Rp 15.000</string>
    <string name="start_working_label">Mulai jalan ( %s )</string>
    <string name="start_working_place">Teluk Tiram</string>
    <string name="stop_working_label">Berhenti ( %s )</string>
    <string name="stop_working_place">Pekauman</string>
    <string name="tv_date_placeholder">%s</string>

    <!-- contentDescription strings for Image View and others -->
    <string name="iv_arrow">Arrow Action</string>
    <string name="iv_total_distance">Total Distance for today</string>
    <string name="tv_total_distance">5 km</string>
    <string name="tv_desc_total_distance">Jarak hari ini</string>
    <string name="iv_distance_left">Distance to go for today</string>
    <string name="iv_days_left">Days before expiring</string>
    <string name="hint_email">Cth. nama@email.com</string>
    <string name="ic_email">email</string>
    <string name="line_defines_screen">Line that defines which screen currently</string>
    <string name="facebook_login">Facebook Logo</string>
    <string name="dashboard_get_location">Button for getting current location</string>
    <string name="bottom_sheet_profile_image">Driver Profile Image</string>
    <string name="container_inside_bottom_sheet">Container that holds driver current performance</string>
    <string name="bt_navDrawer_description">Burger Bar to open Nav Drawer</string>
    <string name="dashboard_status_container">Collapsible Status View</string>
    <string name="ic_moon_offline">Indicating offline state</string>
    <string name="bottom_sheet_shadow">Bottom Sheet Drop Shadow</string>
    <string name="bottom_sheet">Dashboard Bottom Sheet</string>
    <string name="iv_profile">Profile Picture</string>
    <string name="iv_details_arrow">Click to edit</string>
    <string name="container_editText">Container for Edit Text</string>
    <string name="countryCodeTelp">Kode Negara Nomor Telepon</string>

    <!-- Navigation Drawer's String-->
    <string name="nav_home">Home</string>
    <string name="profile_bar">Bar indicating profile</string>
    <string name="nav_wallet">Dompet Ku</string>
    <string name="nav_history">History</string>
    <string name="nav_setting">Pengaturan</string>
    <string name="nav_logout">Logout</string>

    <!-- Other Strings -->
    <string name="hint_password">*******************</string>
    <string name="bt_masuk">Masuk</string>
    <string name="bt_facebook">Masuk dengan Facebook</string>
    <string name="bt_lanjut">Lanjut</string>
    <string name="ed_nomorKTP">63xxxxxxxxxxxxxx</string>
    <string name="idCountryCode">+62</string>
    <string name="ed_nomorTelepon">812-xxxx-xxxx</string>
    <string name="radio_male">Laki-laki</string>
    <string name="radio_female">Perempuan</string>
    <string name="bt_simpan">Simpan</string>
    <string name="ed_kota">Cth. Banjarmasin</string>
    <string name="ed_kecamatan">Cth. Banjarmasin Barat</string>
    <string name="ed_kelurahan">Cth. Basirih</string>
    <string name="ed_alamat">Cth. Jalan-Komp…</string>
    <string name="ed_pekerjaan">Cth. Ojek Online</string>
    <string name="profile_edit_photo">Camera Icon</string>
    <string name="ed_first_name">First Name</string>
    <string name="ed_last_name">Last Name</string>
    <string name="ed_username_container">Edit Text Box</string>
    <string name="ed_username">Cth. Jeremiah</string>
    <string name="ed_profile_phone_number">Cth. +62–8123*******</string>
    <string name="ed_phone_number_container">Edit Text for Phone Number</string>
    <string name="ed_password">Edit Text for Password</string>
    <string name="ic_password">Show or Hide Password</string>
    <string name="bt_cancel">Cancel</string>
    <string name="phone_number">+62 822–1234–5678</string>
    <string name="email">yourname@email.com</string>
    <string name="year">Fill it with current year</string>
    <string name="ed_year">2020</string>
    <string name="tv_year">Tahun</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="add_icon">Add</string>
    <string name="tv_desc_ktp">Tekan di sini untuk upload</string>
    <string name="tv_sim_label">SIM</string>
    <string name="tv_nomorSIM">Nomor SIM</string>
    <string name="tv_sim">Kartu SIM</string>
    <string name="tv_stnk">STNK</string>
    <string name="tv_status_online">Online</string>


</resources>