<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResetPasswordOneFragment">

    <ImageButton
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16dp"
        android:layout_marginTop="@dimen/dimen40dp"
        android:background="@drawable/ic_arrow"
        android:contentDescription="@string/iv_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/tv_reset_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text32sp"
        app:layout_constraintStart_toStartOf="@id/iv_arrow"
        app:layout_constraintTop_toBottomOf="@id/iv_arrow" />

    <TextView
        android:id="@+id/tv_nomorTelepon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16dp"
        android:layout_marginTop="@dimen/dimen33dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/tv_nomorTelepon"
        android:textColor="@color/dim_grey"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password" />

    <ImageView
        android:id="@+id/iv_prefix_nomorTelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16dp"
        android:layout_marginTop="@dimen/dimen10dp"
        android:background="@drawable/ic_sub_rectangle"
        android:contentDescription="@string/countryCodeTelp"
        app:layout_constraintBottom_toBottomOf="@+id/container_edNomorTelepon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nomorTelepon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/idCountryCode"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_prefix_nomorTelepon"
        app:layout_constraintEnd_toEndOf="@+id/iv_prefix_nomorTelepon"
        app:layout_constraintStart_toStartOf="@+id/iv_prefix_nomorTelepon"
        app:layout_constraintTop_toTopOf="@+id/iv_prefix_nomorTelepon" />

    <ImageView
        android:id="@+id/container_edNomorTelepon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="@dimen/margin16dp"
        android:background="@drawable/ic_edit_text_bar"
        android:contentDescription="@string/container_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_prefix_nomorTelepon"
        app:layout_constraintTop_toBottomOf="@id/tv_nomorTelepon" />

    <EditText
        android:id="@+id/ed_nomorTelepon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/manrope_regular"
        android:hint="@string/tv_nomorTelepon"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:text="@string/ed_nomorTelepon"
        android:textColor="@color/grey"
        android:textSize="@dimen/text12sp"
        app:layout_constraintBottom_toBottomOf="@+id/container_edNomorTelepon"
        app:layout_constraintEnd_toEndOf="@+id/container_edNomorTelepon"
        app:layout_constraintStart_toStartOf="@+id/container_edNomorTelepon"
        app:layout_constraintTop_toTopOf="@+id/container_edNomorTelepon" />

    <TextView
        android:id="@+id/tv_resend_link_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin7dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/tv_resend_link_desc"
        android:textSize="@dimen/text12sp"
        app:layout_constraintStart_toStartOf="@+id/iv_prefix_nomorTelepon"
        app:layout_constraintTop_toBottomOf="@+id/container_edNomorTelepon" />

    <TextView
        android:id="@+id/tv_resend_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin7dp"
        android:layout_marginTop="@dimen/margin7dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/tv_resend_link"
        android:textSize="@dimen/text12sp"
        app:layout_constraintStart_toEndOf="@id/tv_resend_link_desc"
        app:layout_constraintTop_toBottomOf="@id/container_edNomorTelepon" />

    <Button
        android:id="@+id/bt_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16dp"
        android:layout_marginTop="@dimen/margin67dp"
        android:layout_marginEnd="@dimen/margin16dp"
        android:fontFamily="@font/manrope_regular"
        android:letterSpacing="0"
        android:text="@string/tv_send"
        android:textAllCaps="false"
        android:textSize="@dimen/text24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_resend_link_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>