<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="270dp"
    android:background="@drawable/ic_drawer_header">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginStart="@dimen/dimen33dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/grey_2" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/tv_driver_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/iv_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_driver_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/tv_driver_level"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="14dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        android:background="@color/black"
        app:layout_constraintStart_toEndOf="@id/tv_driver_level"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_name" />

    <ImageView
        android:id="@+id/profile_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:background="@drawable/ic_text_profile_bar"
        android:contentDescription="@string/profile_bar"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
        tools:layout_editor_absoluteY="84dp" />

    <ImageView
        android:id="@+id/iv_total_distance"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="@dimen/dimen33dp"
        android:background="@drawable/ic_total_distance"
        android:contentDescription="@string/iv_total_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/tv_total_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/tv_total_distance"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_total_distance"
        app:layout_constraintStart_toStartOf="@+id/iv_total_distance"
        app:layout_constraintTop_toBottomOf="@+id/iv_total_distance" />

    <TextView
        android:id="@+id/tv_desc_total_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0.4"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/tv_desc_total_distance"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_total_distance"
        app:layout_constraintStart_toStartOf="@+id/tv_total_distance"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_distance" />

    <ImageView
        android:id="@+id/iv_distance_left"
        android:layout_width="40dp"
        android:layout_height="26dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/ic_distance_left"
        android:contentDescription="@string/iv_distance_left"
        app:layout_constraintBottom_toBottomOf="@+id/iv_total_distance"
        app:layout_constraintEnd_toStartOf="@+id/iv_days_left"
        app:layout_constraintStart_toEndOf="@+id/iv_total_distance"
        app:layout_constraintTop_toTopOf="@+id/iv_total_distance" />

    <TextView
        android:id="@+id/tv_distance_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/tv_total_distance"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_distance_left"
        app:layout_constraintStart_toStartOf="@+id/iv_distance_left"
        app:layout_constraintTop_toBottomOf="@+id/iv_distance_left" />

    <TextView
        android:id="@+id/tv_desc_distance_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.4"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/tv_desc_distance_left"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_distance_left"
        app:layout_constraintStart_toStartOf="@+id/tv_distance_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_distance_left" />

    <ImageView
        android:id="@+id/iv_days_left"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/ic_calendar"
        android:contentDescription="@string/iv_days_left"
        app:layout_constraintBottom_toBottomOf="@+id/iv_distance_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_distance_left" />

    <TextView
        android:id="@+id/tv_days_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/tv_days_left"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_days_left"
        app:layout_constraintStart_toStartOf="@+id/iv_days_left"
        app:layout_constraintTop_toBottomOf="@+id/iv_days_left" />

    <TextView
        android:id="@+id/tv_desc_days_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0.4"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/tv_desc_days_left"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_days_left"
        app:layout_constraintStart_toStartOf="@+id/tv_days_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_days_left" />

</androidx.constraintlayout.widget.ConstraintLayout>